galley/pkg/config/analysis/analyzers/testdata/virtualservice_conflictingmeshgatewayhosts_exportto.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage
  namespace: foo
spec:
  exportTo:
    - foo
  hosts:
    - productpage # should generate an error as this conflicts with VirtualService foo/bogus-productpage
  http:
    - route:
        - destination:
            host: productpage
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bogus-productpage
  namespace: foo
spec:
  exportTo:
    - foo
  hosts:
    - productpage # should generate an error as this conflicts with VirtualService foo/productpage
  http:
    - route:
        - destination:
            host: reviews
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
  namespace: foo
spec:
  exportTo:
    - foo
  hosts:
    - reviews # shouldn't generate an error because the host is exported to different namespaces with bar/reviews
  http:
    - route:
        - destination:
            host: reviews
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
  namespace: bar
spec:
  export:
    - bar
  hosts:
    - reviews # shouldn't generate an error because the host is exported to different namespaces with foo/reviews
  http:
    - route:
        - destination:
            host: reviews
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
  namespace: foo
spec:
  exportTo:
    - "*"
  hosts:
    - ratings # should generate an error as this conflicts with VirtualService bar/ratings
  http:
    - route:
        - destination:
            host: ratings
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
  namespace: bar
spec:
  exportTo:
    - "bar"
  hosts:
    - ratings.foo.svc.cluster.local # should generate an error because hosts conflict with VirtualService foo/ratings
    - google.com
  http:
    - route:
        - destination:
            host: ratings
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
  namespace: team1
spec:
  hosts:
    - ratings # shouldn't generate an error as this doesn't conflict with VirtualService ratings.team2 due to exportTo setting
  gateways:
    - mesh
  exportTo:
    - "."
  http:
    - route:
        - destination:
            host: ratings
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
  namespace: team2
spec:
  hosts:
    - ratings.team1.svc.cluster.local # shouldn't generate an error as this VirtualService doesn't conflict with VirtualService ratings.team1 due to exportTo setting
    - google.com
  exportTo:
    - "."
  gateways:
    - istio-ingressgateway
    - mesh
  http:
    - route:
        - destination:
            host: ratings
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
  namespace: team3
spec:
  hosts:
    - ratings # should generate an error as this conflicts with VirtualService ratings.team4
  gateways:
    - mesh
  exportTo:
    - "*"
    - "team3"
  http:
    - route:
        - destination:
            host: ratings
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
  namespace: team4
spec:
  hosts:
    - ratings.team3.svc.cluster.local # should generate an error as this conflicts with VirtualService ratings.team3
  gateways:
    - istio-ingressgateway
    - mesh
  http:
    - route:
        - destination:
            host: ratings
---
